--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL Build Test.loader.js";
+      var loaderUrl = buildUrl + "/WebGL CLient.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL Build Test.data.gz",
-        frameworkUrl: buildUrl + "/WebGL Build Test.framework.js.gz",
-        codeUrl: buildUrl + "/WebGL Build Test.wasm.gz",
+        dataUrl: buildUrl + "/WebGL CLient.data",
+        frameworkUrl: buildUrl + "/WebGL CLient.framework.js",
+        codeUrl: buildUrl + "/WebGL CLient.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebTestProject",
